# exercise-shipping-service

./: .gitignore  Dockerfile  LICENSE  README.md  dev.env  docker-compose.yml  gunicorn.config.py  manage.py  pyproject.toml
.github/workflows/: ci.yaml
shipping_service/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
shipping_service/scripts/: celery_beat_worker.sh
shipping_service/shipping/: apps.py  common.py  cron.py  filtersets.py  models.py  routers.py  serializers.py  urls.py  views.py
shipping_service/shipping/migrations/: 0001_initial.py
tests/: conftest.py  settings.py
tests/shipping/: test_cron.py  test_migrations.py  test_views.py
